--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,9 +63,15 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  display: flex;
+  align-items: center;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.oi:empty:before {
+  margin: 0 auto;
 }
