add function to audit the hour with color changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,3 +75,13 @@ textarea{
 .oi:empty:before {
   margin: 0 auto;
 }
+
+.show {
+  display: block;
+}
+
+.alert {
+  display: none;
+  padding-bottom: 10px;
+  color: black;
+}
